--- a/gradle/distributionTesting.gradle
+++ b/gradle/distributionTesting.gradle
@@ -179,12 +179,9 @@ project(":") {
     }
 
     task cleanUpCaches {
-        dependsOn ':createBuildReceipt'
+        dependsOn ':versionInfo:createTestBuildReceipt'
         doLast {
             def executingVersion = GradleVersion.version(gradle.gradleVersion)
-
-            def versionProps = readBuildReceipt("${buildDir}/${buildReceiptFileName}")
-            def testedVersion = GradleVersion.version(versionProps.versionNumber)
 
             // Expire .gradle cache where major version is older than executing version
             def expireTaskCache = { candidateVersion ->
@@ -194,7 +191,7 @@ project(":") {
             // Expire intTestImage cache snapshots that are older than the tested version
             // Also expire version-specific cache snapshots when they can't be re-used (for 'snapshot-1' developer builds)
             def expireIntegTestCache = { candidateVersion ->
-                return (candidateVersion.snapshot && candidateVersion < testedVersion) || candidateVersion.version.endsWith('-snapshot-1')
+                return (candidateVersion.snapshot && candidateVersion < GradleVersion.version(testedVersion)) || candidateVersion.version.endsWith('-snapshot-1')
             }
 
             // Remove state for old versions of Gradle that we're unlikely to ever require again
