Fix building intTestImage from incoming distribution
We were trying to use the wrong directory.

--- a/gradle/intTestImage.gradle
+++ b/gradle/intTestImage.gradle
@@ -29,7 +29,7 @@ if (useIncomingDistributions) {
     }
 
     // Compensate for the top level dir in the zip
-    def unpackedPath = "$unpackIncomingAllDistribution.destinationDir/${incomingAllDistribution.name - "-all.zip"}"
+    def unpackedPath = "$unpackIncomingAllDistribution.destinationDir/gradle-${incomingDistributionsBuildReceipt.versionNumber}"
 
     intTestImage {
         dependsOn unpackIncomingAllDistribution
