Use same build-receipt for wrapper tests as in production
The auto-generated build receipt when creating a new wrapper
only contains the version number.

--- a/subprojects/wrapper/wrapper.gradle
+++ b/subprojects/wrapper/wrapper.gradle
@@ -31,12 +31,13 @@ ext {
 }
 
 task wrapperBuildReceiptResource() {
-    inputs.property 'version', { project(":versionInfo").createTestBuildReceipt.versionNumber }
-    outputs.file { "${generatedTestResourcesDir}/${wrapperBuildReceipt}" }
+    ext.destinationFile = file("${generatedTestResourcesDir}/${wrapperBuildReceipt}")
+    inputs.property("versionNumber") { testedVersion }
+    outputs.file(destinationFile)
     outputs.cacheIf { true }
     doLast {
-        generatedTestResourcesDir.mkdirs()
-        new File(generatedTestResourcesDir, wrapperBuildReceipt).text = "versionNumber=${project(":versionInfo").createTestBuildReceipt.versionNumber}"
+        destinationFile.parentFile.mkdirs()
+        destinationFile.text = "versionNumber=${testedVersion}"
     }
 }
 sourceSets.test.output.dir generatedTestResourcesDir, builtBy: wrapperBuildReceiptResource
