Use test version info for tests
The motivation behind this is that we want to be able to cache of the
Gradle build. The build receipt will
include a timestamp. For tests we use a different build receipt which doesn't
 include a timestamp or commitId.
 When building the intTestImage we replace the version info included
 in the distribution by the one used for tests, since the Gradle version
 for the test needs to be the same as for the distribution under test.

--- a/subprojects/version-info/version-info.gradle
+++ b/subprojects/version-info/version-info.gradle
@@ -19,4 +19,31 @@ task buildReceiptResource(type: Copy, dependsOn: rootProject.createBuildReceipt)
     from rootProject.createBuildReceipt.receiptFile
 }
 
+configurations {
+    testVersionInfo
+}
+
 sourceSets.main.output.dir generatedResourcesDir, builtBy: buildReceiptResource
+
+task createTestBuildReceipt(type: org.gradle.build.BuildReceipt) {
+    receiptFile = file("$buildDir/test-version-info-resources/org/gradle/build-receipt.properties")
+    versionNumber = rootProject.isSnapshot ? "${rootProject.baseVersion}-snapshot-1" : rootProject.version
+    baseVersion = rootProject.baseVersion
+    snapshot = rootProject.isSnapshot
+}
+
+def libsDir = convention.getPlugin(BasePluginConvention).libsDir
+jar {
+    destinationDir = file("${libsDir}/prod")
+}
+
+task testVersionInfoJar(type: Jar) {
+    dependsOn createTestBuildReceipt
+    destinationDir = file("${libsDir}/test")
+    from "${buildDir}/test-version-info-resources"
+    from classpathManifest
+}
+
+artifacts {
+    testVersionInfo testVersionInfoJar
+}
